--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.7.3",
 		"vite": "^6.0.9"
+	},
+	"dependencies": {
+		"qrcodejs": "github:danielgjackson/qrcodejs"
 	}
 }
